added i18n, login, signup

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,13 +12,43 @@
         "CATEGORY_TEXT": "Select Category"
     },
     "LOGIN": {
+        "LOGIN_TEXT": "LOGIN",
         "USERNAME": "User Name",
-        "PASSWORD": "Password",
         "USERNAME_REQUIRED": "Please enter user name",
         "USERNAME_EMAIL": "username must be of email type",
+        "PASSWORD": "Password",
         "PASSWORD_REQUIRED": "Please enter password",
-        "LOGIN_TEXT": "LOGIN",
+        "PASSWORD_MIN_LENGTH": "Please enter atleast 6 alpha-numeric characters",
+        "PASSWORD_MAX_LENGTH": "Upto 10 alpha-numeric characters are allowed",
+        "INCORRECT_FORMAT": "Only alphabets and digits allowed",
         "SIGNIN": "Sign In",
+        "SIGN_UP_TEXT": "Don't have a username and password?",
+        "SIGN_UP": "Sign Up",
         "INVALID_CREDS": "Invalid Login Credentials"
+    },
+    "SIGNUP": {
+        "SIGNUP_TEXT": "Sign Up",
+        "FIRST_NAME": "First Name",
+        "FIRST_NAME_REQUIRED": "Please Enter your first name",
+        "LAST_NAME": "Last Name",
+        "LAST_NAME_REQUIRED": "Please Enter your last name",
+        "NAME_MIN_LENGTH": "must be of atleast length 3",
+        "NAME_FORMAT": "only alphabetical characters allowed",
+        "EMAIL": "Email",
+        "EMAIL_REQUIRED": "Please Enter email-id",
+        "EMAIL_FORMAT": "Email pattern required",
+        "PHONE_NUMBER": "Phone number",
+        "PHONE_NUMBER_REQUIRED": "Please Enter your phone number",
+        "PHONE_NUMBER_MAX_LENGTH": "Upto 10 numeric characters are allowed",
+        "PHONE_NUMBER_FORMAT": "Please enter numbers only",
+        "PASSWORD": "Password",
+        "PASSWORD_REQUIRED": "Please Enter Password",
+        "PASSWORD_MIN_LENGTH": "Please enter atleast 6 alpha-numeric characters",
+        "PASSWORD_MAX_LENGTH": "upto 10 alpha-numeric characters are allowed",
+        "PASSWORD_FORMAT": "not in correct alpha-numeric format",
+        "CONFIRM_PASSWORD": "Confirm Password",
+        "CONFIRM_PASSWORD_REQUIRED": "Please confirm your password",
+        "PASSWORD_MIS_MATCH":"Password and confirm password should be same",
+        "CANCEL":"Cancel"
     }
 }
