added i18n for sign up msgs

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,6 +49,8 @@
         "CONFIRM_PASSWORD": "Confirm Password",
         "CONFIRM_PASSWORD_REQUIRED": "Please confirm your password",
         "PASSWORD_MIS_MATCH":"Password and confirm password should be same",
-        "CANCEL":"Cancel"
+        "CANCEL":"Cancel",
+        "USER_ALREADY_EXIST": "User Already Exists.",
+        "USER_CREATED_SUCCESSFULLY":"User Created Successfully."
     }
 }
