added changes for bug fixing

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,7 +27,7 @@
         "PASSWORD_REQUIRED": "Please enter password",
         "PASSWORD_MIN_LENGTH": "Please enter atleast 6 alpha-numeric characters",
         "PASSWORD_MAX_LENGTH": "Upto 10 alpha-numeric characters are allowed",
-        "INCORRECT_FORMAT": "Only alphabets and digits allowed",
+        "INCORRECT_FORMAT": "Only alphabets, digits, special characters allowed",
         "SIGNIN": "Sign In",
         "SIGN_UP": "Sign Up",
         "INVALID_CREDS": "Invalid Login Credentials"
@@ -51,7 +51,7 @@
         "PASSWORD_REQUIRED": "Please Enter Password",
         "PASSWORD_MIN_LENGTH": "Please enter atleast 6 alpha-numeric characters",
         "PASSWORD_MAX_LENGTH": "upto 10 alpha-numeric characters are allowed",
-        "PASSWORD_FORMAT": "Only alphabets and digits allowed",
+        "PASSWORD_FORMAT": "Only alphabets, digits, special characters allowed",
         "CONFIRM_PASSWORD": "Confirm Password",
         "CONFIRM_PASSWORD_REQUIRED": "Please confirm your password",
         "PASSWORD_MIS_MATCH": "Password and confirm password should be same",
